# claude-manager

./: .envrc  .gitignore  CLAUDE.md  CM-301_DELIVERY_REPORT.md  CM-303_COMPLETION_REPORT.md  CM-303_HANDOFF.md  CM-303_IMPLEMENTATION_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE_QUICK_REFERENCE.md  HANDOFF.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  README_BUILD.md  RELEASE_NOTES_v1.1.0.md  RELEASE_READINESS.md  SECURITY.md  TESTING_SUMMARY.md  TEST_IMPLEMENTATION_CHECKLIST.md  TODO.md  TUI_COMPLETION_SUMMARY.md  TUI_QUICK_START.md  Taskfile.yml  claude-manager.sh  claude-project-migrator.sh  claude-session-context.sh  cm-quick-move.sh  cm-quick-undo.sh  consolidate-session.sh  install.sh  run-tui.sh  test-cm-mv-edge-cases.sh
.analysis/: FLATTENING_SUMMARY.md  phase1-staleness-report.md  src-diff.txt
.build/: _claude-session-tui_reference
.cargo/: config.toml  config.toml.template
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc.md
.tasks/2025-10-27_22-34-41_documentation_foundation/: 2025-10-27_18-12-50_documentation_DELIVERABLES.md  2025-10-27_22-34-41_documentation_PHASE_1_DELIVERY_CHECKLIST.md
.tasks/2025-10-29_16-57-39_documentation_tui/: 2025-10-29_16-57-39_documentation_TUI_TECHNICAL.md
.tasks/2025-11-05_18-13-54_analysis_cargo/: 2025-11-05_18-12-39_analysis_CARGO_ANALYSIS.md  2025-11-05_18-12-39_analysis_CARGO_ANALYSIS_SUMMARY.txt  2025-11-05_18-12-39_logs_CARGO_STRUCTURE_DIAGRAM.txt  2025-11-05_18-12-57_documentation_CARGO_QUICK_FIX.md  2025-11-05_18-13-54_analysis_CARGO_ANALYSIS_INDEX.md
.tasks/2025-11-10_18-25-34_documentation_xdg/: 2025-11-10_18-21-40_documentation_XDG_STRUCTURE_MAP.md  2025-11-10_18-22-10_documentation_XDG_INTEGRATION_SUMMARY.md  2025-11-10_18-22-58_documentation_XDG_VISUAL_HIERARCHY.md  2025-11-10_18-24-14_documentation_XDG_DOCUMENTATION_INDEX.md  2025-11-10_18-25-34_documentation_XDG_INTEGRATION_COMPLETE.md
.tasks/2025-11-11_01-20-35_documentation_operations/: 2025-11-11_01-19-45_documentation_BUILD_SYSTEM.md  (+1 more)
.tasks/phase-1/: PHASE_1_KICKOFF.md
artifacts/: completion_report.md
claude-session-tui/: .gitignore  .hookrc  CODE_CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES.md  GOVERNANCE.md  KEY_SCOPING_FINAL_FIX.md  LICENSE  NOTICE  OPTIMIZATION_SUMMARY.md  PANE_FOCUS_BEHAVIOR.md  PHASE5_DEVELOPER_GUIDE.md  PHASE5_SEARCH_INTEGRATION_SUMMARY.md  PHASE5_USAGE_EXAMPLES.md  PHASE5_VERIFICATION.md  PHASE_ARCHITECTURE_VISION.md  PUBLIC_RELEASE_READINESS.md  README.md  RESUME_FEATURE_ROADMAP.md  SCROLL_RESPONSIVENESS_UPDATE.md  SECURITY.md  STAGE_1_RESUME_IMPLEMENTATION.md  TODO.md  WORK_SUMMARY_2025-10-29.md  claude-manager.sh  cm-quick-move.sh  cm-quick-undo.sh  federation-integration  lefthook.yml  run-tui.sh  test-cm-mv-edge-cases.sh  test_path_decoding  test_path_decoding.rs  test_path_decoding_v2  test_path_decoding_v2.rs
claude-session-tui/.codeviz/Workspace 1/: ClaudeManager-CodeViz-Diagram.md  Unnamed-CodeViz-Diagram.drawio
claude-session-tui/.github/workflows/: lint.yml  release.yml  test.yml
claude-session-tui/benches/: parser_benchmarks.rs
claude-session-tui/claude-session-tui/: Cargo.toml
claude-session-tui/claude-session-tui/benches/: parser_benchmarks.rs
claude-session-tui/claude-session-tui/demo_projects/-Users-tryk--claude-sync/: d3b30efc-a6dc-4fc7-9481-b5af6dd11da9.jsonl
claude-session-tui/claude-session-tui/src/: api.rs  insights.rs  main.rs
claude-session-tui/claude-session-tui/src/search/: engine.rs  error.rs  mod.rs  patterns.rs  query.rs
claude-session-tui/claude-session-tui/src/ui/: app.rs  session_tree.rs
claude-session-tui/claude-session-tui/src/v2/core/: errors.rs  mod.rs  traits.rs
claude-session-tui/claude-session-tui/src/v2/shadow/beru/: mod.rs
claude-session-tui/claude-session-tui/src/v2/shadow/tank/: mod.rs
claude-session-tui/claude-session-tui/tests/: integration_tests.rs
claude-session-tui/demo_projects/-Users-tryk--claude-sync/: 96af0e36-8175-403a-b340-60a7106650c5.jsonl
claude-session-tui/demo_projects/-fake/: sample.jsonl  sample3.jsonl
claude-session-tui/demo_sessions/: sample.jsonl  sample2.jsonl  sample3.jsonl
claude-session-tui/docs/: ASYNC_DIRECTORY_SCAN_OPTIMIZATION.md  ASYNC_OPTIMIZATION_QUICK_REFERENCE.md  README.md
claude-session-tui/docs/architecture/: session-management.md
claude-session-tui/federation-integration/src/: types.ts
claude-session-tui/federation-integration/src/federation/: agent_selector.ts  export.ts  transformer.ts
claude-session-tui/federation-integration/src/mock/: server.ts
claude-session-tui/python/: setup.sh  test_claude_manager_tui.py
claude-session-tui/src/: api.rs  error.rs  extractor.rs  insights.rs  lib.rs  main.rs  models.rs  parser.rs
claude-session-tui/src/ui/: app.rs  conversation.rs  mod.rs
claude-session-tui/src/v2/: mod.rs  validation.rs
claude-session-tui/src/v2/core/: errors.rs  mod.rs  models.rs  traits.rs
claude-session-tui/src/v2/shadow/: mod.rs
claude-session-tui/src/v2/shadow/beru/: mod.rs
claude-session-tui/src/v2/shadow/iron/: mod.rs
claude-session-tui/src/v2/shadow/tank/: mod.rs
claude-session-tui/src/v2/shadow/tusk/: mod.rs
claude-session-tui/tests/: integration_tests.rs  test_cm_special_cases.sh  tui_navigation_tests.rs  tui_search_tests.rs  tui_session_loading_tests.rs
docs/: CM-301_IMPLEMENTATION_SUMMARY.md  CM-302_REPAIR_MODE_COMPLETION.md  DIAGNOSTICS_QUICK_REFERENCE.md  GETTING_STARTED.md  ONBOARDING.md  REPAIR_MODE_QUICK_START.md  REPOSITORY_ANALYSIS_2025-09-24.md  TEST_AUTOMATION_STRATEGY.md
examples/: basic-migrate.sh  batch-migrate.sh
federation-integration/: IMPLEMENTATION.md  README.md  RECOVERY_AUDIT_CONFIG.md  package.json  tsconfig.json
lib/: diagnostics.sh  governance.sh  repair.sh
python/: README.md  TYPE_SAFETY_REVIEW.md  claude_manager_tui.py  claude_manager_tui_typed.py  dev-setup.py  pyproject.toml  requirements.txt  test_claude_manager_tui.py
src/: claude-manager.sh
tests/: QUICKSTART.md  README.md  test_basic.sh  test_helper.bash
(+54 files in other folders)
