[package]
name = "claude-session-tui"
version = "0.1.0"
edition = "2021"
description = "High-performance JSONL parser for Claude session files"
authors = ["Nabia AI Stack"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
regex = "1.10"
indexmap = { version = "2.0", features = ["serde"] }
dashmap = "5.5"
rayon = "1.8"
walkdir = "2.4"
futures = "0.3"
num_cpus = "1.16"

# V2 Shadow Renaissance Architecture dependencies
async-trait = { version = "0.1", optional = true }
pin-project = { version = "1.1", optional = true }

# Search engine dependencies
tantivy = "0.22"
fuzzy-matcher = "0.3"
crossbeam = "0.8"
lru = "0.12"
parking_lot = "0.12"
memmap2 = "0.9"

# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"
syntect = "5.2"
unicode-width = "0.1"
tui-input = "0.8"
textwrap = "0.16"

[features]
default = []
tui = []
v2 = ["async-trait", "pin-project"]
shadow = ["v2"]

[[bin]]
name = "claude-session-tui"
path = "src/main.rs"
required-features = ["tui"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
tokio-test = "0.4"

[[bench]]
name = "parser_benchmarks"
harness = false

[lib]
name = "claude_session_tui"
path = "src/lib.rs"
